# vecs

./: .gitignore  CMakeLists.txt  README.md  utest.h  vecs.h  vecs.natvis  vecs_stress_test.cpp  vecs_test.cpp
.github/workflows/: ci.yml
demos/: adventure.cpp  adventure.md  adventure_test.md  simd_survivors.cpp
