cmake_minimum_required( VERSION 3.20 )
project( vecs_test LANGUAGES CXX )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_CXX_EXTENSIONS OFF )

if ( WIN32 )
    add_compile_options( /W4 )
    if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
        add_compile_options( /arch:AVX2 )
    endif()
elseif ( APPLE )
    add_compile_options( -Wall -Wextra -Wpedantic -stdlib=libc++ )
    if ( CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64" )
        add_compile_options( -mavx2 )
    endif()
    add_link_options( -stdlib=libc++ )
else()
    add_compile_options( -Wall -Wextra -Wpedantic -stdlib=libc++ -fno-exceptions )
    if ( CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "amd64" )
        add_compile_options( -mavx2 )
    endif()
    add_link_options( -stdlib=libc++ )
endif()

add_executable( vecs_test vecs_test.cpp )
target_include_directories( vecs_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
if ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/entt/single_include" )
    target_include_directories( vecs_test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/entt/single_include" )
endif()

option( BUILD_DEMO "Build the SIMD Survivors game demo" OFF )
if ( BUILD_DEMO )
    add_executable( simd_survivors demos/simd_survivors.cpp )
    target_include_directories( simd_survivors PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )

    add_executable( adventure demos/adventure.cpp )
    target_include_directories( adventure PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
endif()
