cmake_minimum_required( VERSION 3.20 )
project( vecs_test LANGUAGES CXX )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_CXX_EXTENSIONS OFF )

if ( WIN32 )
    add_compile_options( /W4 )
    if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
        add_compile_options( /arch:AVX2 )
    endif()
elseif ( APPLE )
    add_compile_options( -Wall -Wextra -Wpedantic -stdlib=libc++ )
    if ( CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64" )
        add_compile_options( -mavx2 )
    endif()
    add_link_options( -stdlib=libc++ )
else()
    add_compile_options( -Wall -Wextra -Wpedantic -stdlib=libc++ -fno-exceptions )
    if ( CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "amd64" )
        add_compile_options( -mavx2 )
    endif()
    add_link_options( -stdlib=libc++ )
endif()

function( add_vecs_test_target target source )
    add_executable( ${target} ${source} )
    target_include_directories( ${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
    if ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/entt/single_include" )
        target_include_directories( ${target} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/entt/single_include" )
    endif()
endfunction()

add_vecs_test_target( vecs_test vecs_test.cpp )
add_vecs_test_target( vecs_stress_test vecs_stress_test.cpp )
add_vecs_test_target( vecs_test_no_simd vecs_test.cpp )
target_compile_definitions( vecs_test_no_simd PRIVATE VECS_NO_SIMD )

add_vecs_test_target( vecs_test_smallcfg vecs_test.cpp )
target_compile_definitions( vecs_test_smallcfg PRIVATE VECS_MAX_ENTITIES=4096 VECS_MAX_COMPONENTS=64 )

option( BUILD_DEMO "Build the SIMD Survivors game demo" OFF )
if ( BUILD_DEMO )
    add_executable( simd_survivors demos/simd_survivors.cpp )
    target_include_directories( simd_survivors PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )

    add_executable( adventure demos/adventure.cpp )
    target_include_directories( adventure PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
endif()
